--- a/variables.html
+++ b/variables.html
@@ -29,7 +29,7 @@
     </section>
     <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
         <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
-        <a href="index.html">מי אנו?</a>
+        <a href="index.html">מי אנחנו?</a>
         <a href="firstProgram.html">התוכנית הראשונה</a>
         <a href="variables.html"><span class="colorcheck">משתנים</span></a>
         <a href="printAndScan.html">קלט ופלט</a>
