--- a/twoDimArrays.html
+++ b/twoDimArrays.html
@@ -77,7 +77,7 @@
         </p>
       </div>
 
-      <img class="pic" src="assest/TabelsForTwoDimArrays/two_dim_arrays_1.png" alt="table">
+      <img class="pic_big" src="assest/TabelsForTwoDimArrays/two_dim_arrays_1.png" alt="table">
 
 
 
