--- a/binSearch.html
+++ b/binSearch.html
@@ -64,25 +64,29 @@
       <p>
         חיפוש בינארי הינה שיטת חיפוש שבה אנו מוצאים (או לא מוצאים) את הנתון המבוקש בסדר גודל של log(n).
         <br>
-        רעיון השיטה – ניקח מערך ממויין, ידוע לנו שהמספרים שבו עולים מהקטן לגדול ולכן באינדקסים הנמוכים יהיו המספרים
+        <br>
+        רעיון השיטה:
+        <br>
+        ניקח מערך ממויין, ידוע לנו שהמספרים שבו עולים מהקטן לגדול ולכן באינדקסים הנמוכים יהיו המספרים
         הקטנים
-        ביותר ובאינדקסים הגבוהים יותר יהיו מספרים הגדולים ביותר.
+        ביותר ובאינדקסים הגבוהים יהיו מספרים הגדולים ביותר.
         <br>
-        כדי למצוא מספר מבוקש אנו נקצה שלושה משתנים שיצביעו על התחלת המערך , אמצע המערך וסוף המערך.
-        <br>
+        כדי למצוא מספר מבוקש אנו נקצה שלושה משתנים שיצביעו על התחלת המערך, אמצע המערך וסוף המערך.
         במהלך חיפוש בינארי, אנו נדאג לבדוק האם המספר שנמצא באמצע המערך שלנו גדול / קטן / שווה למספר שאותו אנו מחפשים.
         <br>
-        אם המספר קטן מהמספר שאותו אנחנו מחפשים , זה אומר שאנחנו נחפש יותר לכיוון סוף המערך.
         <br>
-        אם המספר גדול מהמספר שאותו אנחנו מחפשים, זה אומר שאנחנו נחפש יותר לכיוון תחילת המערך.
+        אם המספר קטן מהמספר שאותו אנו מחפשים , זה אומר שאנו נחפש יותר לכיוון סוף המערך.
         <br>
-        אם המספר שווה למספר שאותו אנחנו מחפשים , אנו נחזיר תשובה חיובית חזרה מהפונקציה.
+        אם המספר גדול מהמספר שאותו אנו מחפשים, זה אומר שאנו נחפש יותר לכיוון תחילת המערך.
         <br>
-        נראה דוגמה ונפרש אותה במילים,נניח שיש לנו את המערך הבא:
+        אם המספר שווה למספר שאותו אנו מחפשים , אנו נחזיר תשובה חיובית חזרה מהפונקציה.
         <br>
-        <span dir="ltr">arr = { 1 , 2 , 3 , 4 , 5 ,6 ,7 ,8 ,9};</span><br> שידוע לנו שגודלו הוא 9.
         <br>
-        ואנחנו רוצים לדעת באיזה אינדקס נמצא האיבר 8 (אם בכלל הוא נמצא).
+        נניח שיש לנו את המערך הבא:
+        <br>
+        <span dir="ltr">arr = {1, 2, 3, 4, 5, 6, 7, 8, 9};</span><br> שידוע לנו שגודלו הוא 9.
+        <br>
+        ואנו רוצים לדעת באיזה אינדקס נמצא האיבר 8 (אם בכלל הוא נמצא).
       </p>
 
     </div>
@@ -101,18 +105,18 @@
   <b>int</b> start = 0 , middle , end = sizeOfArr-1;
   <b>while</b>(start&lt;end)
   {
-    middle = (start+end)/2;
+    middle = (start+end) / 2;
     <b>if</b>(arr[middle] == key)
     {
       <b>return</b> middle;
     }
     <b>else if</b>(arr[middle] &lt; key)
     {
-      start = middle+1;
+      start = middle + 1;
     }
     <b>else</b>   
     {  
-      end = middle-1;  
+      end = middle - 1;  
     }
 
   }
@@ -123,60 +127,82 @@
       </div>
     </div>
 
+
+    <h3 class="head-right">הסבר על הקוד:</h3>
     <div class="First-Para">
       <p>
+        ראשית, נצהיר על משתנים start = 0 , middle , end = sizeOfArr-1.
         <br>
-        אז מה בעצם עשינו פה ?
-        <ol>
-          <li>
-            הצהרה על משתנים התחלה , אמצע , סיום.
-          </li>
-          <li>
-            ריצה על לולאת while שבה:
-          </li>
-          <ul>
-            <li>הכנסת ערך למשתנה אמצע – תמיד יהיה שווה ל(התחלה + סיום) חלקי 2.</li>
-            <li>בדיקה האם האיבר שנמצא במערך באינדקס אמצע שווה למה שאנחנו מחפשים?<br>
-              אם כן נחזיר את האינדקס של האיבר במערך.</li>
-            <li>האם האיבר במערך קטן מהאיבר שאותו אנחנו מחפשים?
-              <br>
-              אם כן, אין צורך להסתכל יותר על הצד השמאלי של המערך משום שכל האיברים שם קטנים מהאיבר האמצעי.
-              ואנחנו נגיד שמעכשיו האיבר הראשון שעליו אנחנו מתסכלים ימצא באינדקס האמצעי + 1 (הסיבה לכך שאנחנו מוסיפים 1
-              היא
-              בגלל
-              שאין לנו צורך להסתכל יותר על איבר האמצע כי בדקנו אותו).
-            </li>
-            <li>
-              האם האיבר במערך גדול מהאיבר שאותו אנחנו מחפשים?<br>
-              אם כן, אין צורך להסתכל יותר על הצד הימני של המערך משום שכל האיברים שם גדולים מהאיבר האמצעי.
-              ואנחנו נגיד שמעכשיו האיבר הראשון שעליו אנחנו מסתכלים ימצא באינדקס האמצעי פחות 1 (הסיבה לכך שאנחנו מחסירים
-              1 היא
-              בגלל
-              שאין לנו צורך להסתכל יותר על האיבר האמצעי כי בדקנו אותו).
-            </li>
-          </ul>
-          <li>
-            במידה ויצאנו מלולאת הwhile שלנו זה אומר שלא מצאנו איבר שעומד בדרישות שלנו ויש להחזיר -1 כדי שהמשתמש יבין
-            שאין
-            אינדקס שמתאר איבר כזה.
-          </li>
-        </ol>
-        מספר הערות על חיפוש בינארי:
-        <ol>
-          <li>ניתן לעשות מניפולציות שונות על החיפוש הבינארי – החיפוש שתואר פה הוא הכללי ביותר ועליו אפשר לבנות כל מיני
-            שאלות
-            וגרסאות שונות.</li>
-          <li>החיפוש הבינארי נחשב ליעיל מאוד משום שהוא רץ בסדר גודל של log(n) – קחו למשל את הדוגמה שלנו עם המערך בעל 9
-            האיברים.</li>
-          <li>
-            בריצה רגילה של לולאת פור מקסימום הפעולות שאותן היינו מבצעים בתוך הלולאה היה 9, בחיפוש בינארי 4.
-            נסו לחשוב אם היו לנו מערך בעל מיליון איברים ? בלולאת חיפוש רגילה היינו עושים מיליון איטרציות , בחיפוש בינארי
-            היינו
-            עושים כ-20.</li>
-        </ol>
+        start ייצג לנו את תחילת המערך, middle ייצג לנו את אמצע המערך וend ייצג לנו את סוף המערך.
+        <br>
+        נרוץ על לולאת while כל עוד start קטן מend (כלומר, כל עוד אנו נמצאים במצב תקין).
+        <br>
+        בתוך הלולאה אנו תמיד נתחיל על ידי הכנסת ערך לmiddle שיהיה שווה ל:
+        <br>
+        <span dir="ltr">(start+end)/2</span>
+        <br>
+        לאחר מכן, נבדוק:
+      </p>
+    </div>
+
+    <h3 class="head-right">האם האיבר שנמצא במערך באינדקס middle שווה לערך שאותו אנו מחפשים?</h3>
+    <div class="First-Para">
+      <p>
+        במידה וכן - נחזיר את האינדקס של האיבר במערך והקוד שלנו הסתיים.
+        <br>
+        במידה ולא - נמשיך בבדיקות:
+        <br>
+      </p>
+    </div>
+
+    <h3 class="head-right">האם האיבר שנמצא במערך באינדקס middle קטן מהערך שאותו אנו מחפשים?</h3>
+    <div class="First-Para">
+      <p>
+        במידה וכן - אין צורך להסתכל על הצד השמאלי (הנוכחי) של המערך משום שכל האיברים שם קטנים מהאיבר האמצעי שלנו ואנו
+        נגיד שמעכשיו האיבר הראשון שעליו אנו מסתכלים ימצא בmiddle + 1.
+        (הסיבה לכך שאנו נוסיף 1 היא בגלל שאין לנו צורך להסתכל יותר על איבר האמצע מהסיבוב הנוכחי בלולאה כי הוא כבר נבדק).
+        <br>
+        במידה ולא?
+        <br>
+        נתקדם לשאלות הבאות בתוך הלולאה:
+        <br>
+      </p>
+    </div>
+
+    <h3 class="head-right">האם האיבר במערך גדול מהאיבר שאותו אנו מחפשים?</h3>
+    <div class="First-Para">
+      <p>
+        במידה וכן - אין צורך להסתכל על הצד הימני (הנוכחי) של המערך משום שכל האיברים שם גדולים מהאיבר האמצעי שלנו ואנו
+        נגיד שמעכשיו האיבר הראשון שעליו אנו מסתכלים ימצא ב middle - 1.
+        (הסיבה לכך שאנו נחסיר 1 היא בגלל שאין לנו צורך להסתכל יותר על איבר האמצע מהסיבוב הנוכחי בלולאה כי הוא כבר נבדק).
+        <br>
 
       </p>
     </div>
+
+    <h3 class="head-right">המשך האלגוריתם:</h3>
+    <div class="First-Para">
+      <p>
+
+        אנו נמשיך בצורה זו עד שנגיע לאחד משני מצבים:
+        <br>
+        המצב הראשון - מצאנו את האיבר שאותו אנו מחפשים נחזיר אינדקס והאלגוריתם הסתיים.
+        <br>
+        המצב השני - לא מצאנו את האלגוריתם וחרגנו מתנאי לולאת הwhile שלנו ולכן נחזיר למשתמש
+        <span dir="ltr">-1</span>.
+      </p>
+    </div>
+
+    <h3 class="head-right">חשוב לציין:</h3>
+    <div class="First-Para">
+      <p>
+
+        האלגוריתם המוצג בקוד זה הינו חיפוש בינארי בסיסי, יש אפשרויות לשנות חלקים ממנו בשביל לקבל תוצאה שונה.
+        למשל, אם היינו רוצים לעשות חיפוש בינארי בתוך מערך שקיימות בו חזרות של מספרים (כלומר כל מספר עשוי להופיע יותר מפעם
+        אחת) והיינו רוצים למצוא את המופע הראשון של המספר.
+      </p>
+    </div>
+
   </section>
 
 </body>
